迁移客户端面板与区域收集器 / port client panels and area collectors
迁移 Funnel、Storage、Ultimine、Selection、PlayerStatus、QuickBuild 面板和 GUI renderer，并将区域操作与连锁挖掘落到真实 1.12 世界 API。

Port Funnel, Storage, Ultimine, Selection, PlayerStatus, QuickBuild panels and GUI renderers, and move area operations and vein collection onto the real 1.12 world API.